--- a/tests/docker/Dockerfile
+++ b/tests/docker/Dockerfile
@@ -2,16 +2,26 @@ FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install required packages
+# Install all required packages
 RUN apt-get update && apt-get install -y \
+    # X11/GUI (for xephyr)
     xvfb \
     i3 \
     xterm \
     scrot \
     imagemagick \
-    openssh-client \
     x11-xserver-utils \
     dbus-x11 \
+    # SSH client and server
+    openssh-client \
+    openssh-server \
+    # Networking tools (for remote)
+    iproute2 \
+    iptables \
+    iputils-ping \
+    net-tools \
+    sudo \
+    # Build tools for abduco
     git \
     build-essential \
     libncurses-dev \
@@ -25,12 +35,29 @@ RUN git clone https://github.com/martanne/abduco.git /tmp/abduco && \
     make PREFIX=/usr install && \
     rm -rf /tmp/abduco
 
-# Create necessary directories
+# Create test user (for SSH remote)
+RUN useradd -m -s /bin/bash testuser && \
+    echo 'testuser:testpass' | chpasswd && \
+    usermod -aG sudo testuser && \
+    echo 'testuser ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+
+# Configure SSH server
+RUN mkdir -p /var/run/sshd && \
+    mkdir -p /home/testuser/.ssh && \
+    chmod 700 /home/testuser/.ssh && \
+    chown testuser:testuser /home/testuser/.ssh && \
+    sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
+    sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config && \
+    sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/' /etc/ssh/sshd_config
+
+# Create directories
 RUN mkdir -p /opt/i3mux-test \
     && mkdir -p /root/.ssh/sockets \
     && mkdir -p /tmp/screenshots \
+    && mkdir -p /tmp/i3mux/sessions /tmp/i3mux/locks \
     && chmod 700 /root/.ssh \
-    && chmod 700 /root/.ssh/sockets
+    && chmod 700 /root/.ssh/sockets \
+    && chown -R testuser:testuser /tmp/i3mux
 
 # Copy i3 test config
 COPY i3-test-config /opt/i3mux-test/i3-test-config
@@ -53,5 +80,4 @@ RUN echo "Host i3mux-remote-ssh" > /root/.ssh/config && \
 
 WORKDIR /opt/i3mux-test
 
-# Keep container running
-CMD ["/opt/i3mux-test/start-xephyr.sh"]
+EXPOSE 22
